--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@ ul{
 {
     border: 5px solid;
     width: 50%;
-   
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 20px;
     text-align: center;
     
