--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ h3{
 }
 
 ul{
-    margin-left: auto;
-    margin-right: auto;
+  text-align: center;
+    list-style-position: inside;
 }
  /*areas */
 #types
