--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ ul{
   text-align: center;
     list-style-position: inside;
 }
+ol{
+  text-align: center;
+    list-style-position: inside;
+}
  /*areas */
 #types
 {
